[gd_scene load_steps=3 format=2]

[ext_resource path="res://Effects/LampGlow1.png" type="Texture" id=1]
[ext_resource path="res://StreetLampGlow1.gd" type="Script" id=2]

[node name="StreetLampGlow1" type="Node2D"]
z_index = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.513726 )
z_index = 2
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 6.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
